# poker-rs

./: .gitignore  .goreleaser.yaml  AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: evaluator.rs
doc/: benchmarks.md
src/: agents.rs  cards.rs  deck.rs  engine.rs  evaluator.rs  game.rs  hand.rs  lib.rs
src/agents/: bots.rs
src/evaluator/: combinations.rs  detector.rs  hand_analysis.rs  mod.rs  rank_groups.rs  straight_info.rs  suit_info.rs
src/tui/: controller.rs  mod.rs
src/tui/app/: menu.rs  mod.rs  state.rs
src/tui/ui/: layout.rs  menu.rs  mod.rs  table.rs
src/variants/: mod.rs  omaha.rs
tests/: amount_entry.rs  bots.rs  bust_out.rs  engine_advancement.rs  evaluator_categories.rs  evaluator_properties.rs  hand_history.rs  omaha.rs  rotation.rs  showdown_board.rs  showdown_regression.rs  side_pots.rs  tui_input_smoke.rs
