[package]
name = "poker-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Poker hand evaluation library with a Ratatui TUI scaffold."

[lib]
name = "poker_rs"
path = "src/lib.rs"

[[bin]]
name = "poker"
path = "src/bin/poker.rs"

[features]
default = []
omaha = []
bench = ["dep:criterion"]

[dependencies]
thiserror = "2.0.17"
rand = { version = "0.9.2", default-features = true }
rand_chacha = "0.9.0"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
criterion = { version = "0.8.1", optional = true }

[dev-dependencies]
proptest = "1.9.0"

[[bench]]
name = "evaluator"
harness = false
required-features = ["bench"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
